Fixed overflow style in CartDropdwom

--- a/src/components/cart-item/cart-item.styles.scss
+++ b/src/components/cart-item/cart-item.styles.scss
@@ -18,6 +18,7 @@
 
     .name {
       font-size: 16px;
+      padding-bottom: 8px;
     }
   }
 }
